--- a/style.css
+++ b/style.css
@@ -1,21 +1,60 @@
 body {
-  background-color: darkred;
+  background-color: black;
+  height: 97vh;
 }
-
+h2 {
+  color: white;
+  text-shadow: 9px 9px 14px rgba(0, 0, 0, 1);
+  font-size: 1.8rem;
+}
 .div-buscar {
-  background-color: aqua;
+  border-radius: 9px 9px 9px 9px;
+  -webkit-border-radius: 9px 9px 9px 9px;
+  -moz-border-radius: 9px 9px 9px 9px;
+  background: rgb(12, 19, 79);
+  border: 3px solid #ffffff;
+  color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
+  justify-content: space-between;
   padding-bottom: 1rem;
+  height: 24vh;
 }
+
+#txt-buscar,
+#txt-cantidad {
+  border-radius: 8px;
+  border: 4px solid gray;
+  width: 12rem;
+  text-align: center;
+}
+#txt-buscar::placeholder,
+#txt-cantidad::placeholder {
+  color: black;
+}
+
+#btn-buscar {
+  background-color: black;
+  color: white;
+  box-shadow: 0px 0px 21px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 0px 21px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 21px 0px rgba(0, 0, 0, 0.75);
+  border-radius: 8px;
+  width: 12.5rem;
+}
+
 #mostrar-gif {
-  background-color: chartreuse;
+  border-radius: 9px 9px 9px 9px;
+  -webkit-border-radius: 9px 9px 9px 9px;
+  -moz-border-radius: 9px 9px 9px 9px;
+  background: rgb(29, 38, 125);
+  border: 3px solid #ffffff;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
   gap: 1rem;
   padding: 1rem;
+  height: 66vh;
 }
 
 .div-img img {
